# fiat_tc02_ecommerce

./: .gitattributes  .gitignore  .gitignore.txt  .pre-commit-config.yaml  pyproject.toml  ruff.toml
src/recsys/data/: preprocessing.py
src/recsys/models/: factory.py
